Add: Blunden: A London startup is developing CCTV  cameras that can 'read' emotions of people in crowds

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -1176,6 +1176,15 @@
         <br /><q>A survey by a Beijing research institute indicates growing pushback against facial recognition in China.
         Some 74% of respondents said they wanted the option to be able to use traditional <abbr>ID</abbr> methods over the tech to verify their identity.</q>
       </li>
+      <li>Blunden, Mark:
+        <a href="https://www.standard.co.uk/tech/cctv-cameras-that-can-read-emotions-of-people-in-crowds-a4314311.html">A London start-up is developing <abbr>CCTV</abbr> cameras that can 'read' emotions of people in crowds</a>,
+        <i class="newspaper">The Evening Standard</i>, 17.12.2019.
+        <br /><q>Soho-based start-up Sensing Feeling says the system has the potential to predict people’s behaviour by scanning faces and body language to assess their mood. The footage is checked in real-time against pre-programmed images for signs of anger, contempt, fear, disgust, happiness, sadness and surprise.</q>
+        (&hellip;)
+        <q>It is already in use at a private university outside the <abbr>UK</abbr> which licensed the system to replace student satisfaction feedback forms after lectures.</q>
+        (&hellip;)
+        <q>Silkie Carlo, director of Big Brother Watch, said: “This kind of surveillance aims not to monitor your physical movements but your mental state which is a profoundly dangerous concept.”</q>
+      </li>
     </ul>
 
 
