--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2253,6 +2253,9 @@
       <li>
         <a href="https://www.philosophie.uni-wuerzburg.de/forschung/forschungsstellesozialphilosop/" hreflang="de" lang="de">Forschungsschwerpunkt Sozialphilosophie und Ethik (Universität Würzburg)</a>.
       </li>
+      <li>
+        <a href="https://philo.labo.univ-poitiers.fr/" hreflang="fr" lang="fr">Métaphysique allemande et Philosophie pratique (<abbr>MAPP</abbr>, Université de Poitiers)</a>.
+      </li>
       <li>Sherwood, Harriet:
         <a href="https://www.theguardian.com/uk-news/2018/jan/17/pakistani-humanist-denied-uk-asylum-after-failing-to-identify-plato">Pakistani humanist denied <abbr>UK</abbr> asylum after failing to identify Plato</a>,
         <i class="newspaper">The Guardian</i>, 17.01.2018.
