Add: Altrichter & Ehrensperger: Sokrates

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1829,6 +1829,11 @@
         <q>In a small literary gem full of sardonic wit, brilliant insights, and provocative criticism Witold Gombrowicz discusses
         Kant, Hegel, Schopenhauer, Kierkegaard, Sartre, and Heidegger in six "one-hour" essays—and addresses Marxism in a "fifteen-minute" piece.</q>
       </li>
+      <!--@@section Socrates:-->
+      <li><span lang="de">Altrichter, Rudolf; Ehrensperger, Elisabeth:
+        <i class="booktitle">Sokrates</i>. <abbr>UTB</abbr> Profile. Bern: Haupt</span>, 2010. (114 pages)
+        <abbr>ISBN</abbr> 978-3-8252-3358-7.
+      </li>
     </ul>
 
     <h2>Death</h2>
