Add: McDonald: AI expert calls for end to UK use of raciallly biased algorithms

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -1185,6 +1185,13 @@
         (&hellip;)
         <q>Silkie Carlo, director of Big Brother Watch, said: “This kind of surveillance aims not to monitor your physical movements but your mental state which is a profoundly dangerous concept.”</q>
       </li>
+      <li>McDonald, Henry:
+        <a href="https://www.theguardian.com/technology/2019/dec/12/ai-end-uk-use-racially-biased-algorithms-noel-sharkey"><abbr>AI</abbr> expert calls for end to <abbr>UK</abbr> use of ‘racially biased’ algorithms</a>,
+        <i class="newspaper">The Guardian</i>, 12.12.2019.
+        <br />Prof Noel Sharkey, a British expert on artificial intelligence,
+        <q>has called for all algorithms that make life-changing decisions – in areas from job applications to immigration into the <abbr>UK</abbr>&nbsp;– to be halted immediately.</q>
+        <q>As well as numerous examples of racial bias in machine-led decisions on, for example, who gets bail in the <abbr>US</abbr> or on healthcare allocation, Sharkey said his work on autonomous weapons, or “killer robots”, also illuminated how bias infects algorithms.</q>
+      </li>
     </ul>
 
 
