Add: Dorschel: Ideengeschichte

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1834,6 +1834,10 @@
         <i class="booktitle">Sokrates</i>. <abbr>UTB</abbr> Profile. Bern: Haupt</span>, 2010. (114 pages)
         <abbr>ISBN</abbr> 978-3-8252-3358-7.
       </li>
+      <li><span lang="de">Dorschel, Andreas:
+        <i class="booktitle">Ideengeschichte</i>. <abbr>UTB.</abbr> Göttingen: Vandenhoeck &amp; Ruprecht</span>, 2010. (216 pages)
+        <abbr>ISBN</abbr> 978-3-8252-3314-3.
+      </li>
     </ul>
 
     <h2>Death</h2>
