Add: Psiram (psiram.com)

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -431,6 +431,10 @@
     <h2>Other Links</h2>
     <ul>
       <li>
+        <a href="https://www.psiram.com/de/index.php/Hauptseite" hreflang="de" lang="de">Psiram</a>:
+        <q>Psiram greift Themen aus der Esoterik, den Grenzwissenschaften und der alternativen Medizin auf und berichtet darüber aus kritischer, aufgeklärter Sicht.</q>
+      </li>
+      <li>
         <a href="http://teach-think.org/">Center for Teaching Thinking (<abbr>CTT</abbr>)</a>.
       </li>
       <li>Popova, Maria:
