Add: Cooper: Psychiatry and Philosophy of Science

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -749,7 +749,12 @@
         <a href="https://www.psychologytoday.com/blog/supersurvivors/201710/is-psychology-really-science">Is Psychology Really a Science?</a>,
         <i class="blog">Supervisors</i> (blog on <i class="website">Psychology Today</i>), 06.10.2017.
       </li>
-      
+      <li>Cooper, Rachel:
+        <i class="booktitle">Psychiatry and Philosophy of Science</i>. Routledge, 2007. (240 pages)
+        <a href="https://www.routledge.com/Psychiatry-and-Philosophy-of-Science/Cooper/p/book/9781844651085"><abbr>ISBN</abbr> 9781844651085</a>.
+        <br /><a href="https://www.lancaster.ac.uk/people-profiles/Rachel-Cooper">Rachel Cooper</a>
+        is professor at Lancaster University.
+      </li>
     </ul>
 
     <h2>Other Links</h2>
