Add: Romero: Philosophy of science and the replicability crisis (2019)

--- a/science/index.html
+++ b/science/index.html
@@ -647,6 +647,10 @@
         <a href="https://skeptics.stackexchange.com/q/12520/37758">Can up to 70% of scientific studies not be reproduced?</a>:
         a question on Skeptics StackExchange.
       </li>
+      <li>Romero, Filip:
+        <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/phc3.12633">Philosophy of science and the replicability crisis</a>,
+        <i class="journal">Philosophy Compass</i> (Open Access), Volume 14, Issue 1 (November 2019).
+      </li>
     </ul>
 
     <h3>Scientific Misconduct</h3>
