--- a/philscience/index.html
+++ b/philscience/index.html
@@ -1014,6 +1014,9 @@
         <a href="http://users.ox.ac.uk/~worc0337/phil_topics_sci.html">Philosophy of Science. Including Technology, Cosmology, &amp; Maths</a>.
         This page is a link collection; possibly no updated since 2011.
       </li>
+      <li><a href="https://philosophy.stackexchange.com/q/68722/23586">Is economics a science?</a>
+        This question was posted on Philosophy Stack Exchange in November 2019 and has severals answers that discuss the demarcation problem.
+      </li>
       <!--li>Shermer, Michael: 
         <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
         <i class="journal">Scientific American</i>, vol. 312, no. 6 (June 2015).
