Add quote by Emerson

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
         <cite>Ursula K. Le Guin, <i class="booktitle">The Dispossessed</i> (1974), chapter three.</cite>
       </p>
     </blockquote>
+    <blockquote class="introquote">
+      <p>
+        <q cite="https://en.wikiquote.org/wiki/Ralph_Waldo_Emerson#Journals_(1822%E2%80%931863)">I hate quotation. Tell me what you know.</q>
+        <cite>Ralph Waldo Emerson, <i class="booktitle">Journals</i>, May 1849.</cite>
+      </p>
+    </blockquote>
     <!--
     <blockquote id="introquote">
       <p>
