Add: Hoffman: Despite Scientific Evidence, Most People Believe These Myths

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -358,6 +358,13 @@
         <a href="https://www.wired.com/story/sam-harris-and-the-myth-of-perfectly-rational-thought/">Sam Harris and the Myth of Perfectly Rational Thought</a>,
         <i class="magazine">Wired</i>, 17.05.2018.
       </li>
+      <li>Hoffman, Bobby:
+        <a href="https://www.psychologytoday.com/us/blog/motivate/202001/despite-scientific-evidence-most-people-believe-these-myths">Despite Scientific Evidence, Most People Believe These Myths</a>,
+        <i class="blog">Psychology Today blog</i>, 10.01.2020.
+        <br />This blog posts discusses the following myths:
+        (other) people are unmotivated, willpower is limited, multi-tasking works, nurturing alters intelligence, <abbr>IQ</abbr> scores are culturally based,
+        intelligence can be radically improved, positive thinking cures disease and we accurately judge our capabilities.
+      </li>
       <!-- 
         "False analogy" in the Skeptic's Dictionary: http://skepdic.com/falseanalogy.html 
         "False analogy" (Siris blog): http://branemrys.blogspot.de/2009/07/false-analogy.html
