--- a/humanities/index.html
+++ b/humanities/index.html
@@ -428,7 +428,10 @@
         <a href="https://literarydevices.net/">LiteraryDevices.net</a>.
         (Website maintained by an anonymous person, possibly in the <abbr>USA</abbr>.)
       </li>
-      <!--@@http://web.cn.edu/kwheeler/resource_rhet.html-->
+      <li>Wheeler, I. Kip:
+        <a href="http://web.cn.edu/kwheeler/resource_rhet.html">Rhetoric</a>.
+        This page briefly introduces the concept of rhetoric, describes a few common rhetorical mistakes and provides a few relevant resources.
+      </li>
       <li>University of Cambridge, Faculty of English:
         <a href="https://www.english.cam.ac.uk/classroom/terms.htm">Glossary of Literary Terms</a>.
         <!--@@Further reading listed at bottom of page:
@@ -843,7 +846,7 @@
       </li>
       <li>
         <a href="http://www.europa.clio-online.de/" hreflang="de" lang="de">Themenportal Europäische Geschichte</a>.
-        <!--@@history-->
+        A website about the history of Europe from the early Renaissance to today.
       </li>
       <li>
         <a href="https://podio.com/site/creative-routines">The Daily Routines of Famous Creative People</a>,
