Add: Shah: Global problems need social science (Nature)

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -888,6 +888,11 @@
         <a href="http://www.realclearscience.com/topic/s/Scientific_method/">Scientific method</a> 
         on the website <i class="website">Real Clear Science</i>.<!--@@todo-->
       </li>
+      <li>Shah, Hetan:
+        <a href="https://www.nature.com/articles/d41586-020-00064-x">Global problems need social science</a>,
+        <i class="journal">Nature</i> 577, 15.01.2020.
+        <!--@@summarise-->
+      </li>
       <li><a href="http://www.helsinki.fi/epsa13/"><abbr title="European Philosophy of Science Association">EPSA</abbr> 2013 conference</a>, Helsinki, Finland:
         the <a href="">book of abstracts</a> can be downloaded from the website. 
         <a href="https://www.youtube.com/results?search_query=epsa13+helsinki+tint+coe">Video recordings of the presentations</a> are available on YouTube;
@@ -1023,7 +1028,7 @@
       </li--><!-- referenced in Wikipedia article "logology"; @@check -->
       <!--@@check: Rens Bod (Univeristy of Amsterdam humanities professor - cited by Michael Shermer-->
     </ul>
-    <!-- "What's the distinction between a *narrative* and an *essay*?" https://literature.stackexchange.com/questions/8753/whats-the-distinction-between-a-narrative-and-an-essay 
+    <!--"What's the distinction between a *narrative* and an *essay*?" https://literature.stackexchange.com/questions/8753/whats-the-distinction-between-a-narrative-and-an-essay
       'During a recent symposium a speaker stated that "Thomas Kuhn's book The Structure of Scientific Revolutions was not a narrative, it was an essay."'
       https://duckduckgo.com/?q=%22The+Structure+of+Scientific+Revolutions%22+narrative&t=ffab&ia=products
       Examples of articles etc that use the term "narrative" in the context of a discussion of Kuhn's book:
