Add: Crane: Roger Scruton, 1944–2020

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1923,6 +1923,10 @@
         <br />German translation: <span lang="de"><i class="booktitle">Die kulturelle Entwicklung des menschlichen Denkens</i>. Frankfurt am Main: Suhrkamp</span>, 2002, 2006.
       </li>
       <!--@@@@todo: Massimo Pigliucci's review of Doctor Who and Philosophy: https://philosophynow.org/issues/89/Doctor_Who_and_Philosophy -->
+      <li>Crane, Tim:
+        <a href="https://www.the-tls.co.uk/articles/roger-scruton-1944-2020-tim-crane/">Roger Scruton, 1944–2020</a>,
+        <i class="magazine"><abbr>TLS</abbr></i>, January 2020.
+      </li>
       <li>
         <a href="https://www.youtube.com/watch?v=nQHBAdShgYI">The Trouble with Transporters</a>
         is a 6-minute video by <abbr>CGP</abbr> Grey
