Add: Armstrong: Why philosophers could be the ones to transform your 2020

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1927,6 +1927,16 @@
         <a href="https://www.the-tls.co.uk/articles/roger-scruton-1944-2020-tim-crane/">Roger Scruton, 1944–2020</a>,
         <i class="magazine"><abbr>TLS</abbr></i>, January 2020.
       </li>
+      <li>Armstrong, Neil:
+        <a href="http://www.bbc.com/culture/story/20200114-why-philosophers-could-be-the-ones-to-transform-your-2020">Why philosophers could be the ones to transform your 2020</a>,
+        <i class="website"><abbr>BBC</abbr> News</i>, 15.01.2020.
+        <br />This article is about the rise of self-help books that draw inspiration from specific philosophers,
+        for example, <i class="booktitle">Lessons in Stoicism</i> by John Sellars,
+        <i class="booktitle">How To Be An Existentialist</i> by Gary Cox,
+        <i class="booktitle">How To Teach Philosophy To Your Dog: A  Quirky Introduction to the Big Questions in Philosophy</i> by Anthony McGowan and
+        <i class="booktitle">How to be a Failure and Still Live Well</i> by Beverley Clack.
+        <!--@@summarise-->
+      </li>
       <li>
         <a href="https://www.youtube.com/watch?v=nQHBAdShgYI">The Trouble with Transporters</a>
         is a 6-minute video by <abbr>CGP</abbr> Grey
