Add: Académie Cicéron

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -293,6 +293,14 @@
         </blockquote>
       </li>
       <!--More on this topic: https://www.youtube.com/results?search_query=humanities+definition+science -->
+      <li>
+        <a href="https://academieciceron.com/" hreflang="fr" lang="fr">Académie Cicéron</a>.
+        The <span lang="fr">Académie Cicéron</span> was founded in November 2019 in order to promote general cultural knowledge.
+        The initiative came as a reaction against the elimination of the topic of general culture from certain entrance exams, especially at
+        <a href="https://fr.wikipedia.org/wiki/Sciences_Po" hreflang="fr" lang="fr">Sciences Po</a>.
+        See also
+        <a href="https://twitter.com/AcademieCiceron"><span lang="fr">Académie Cicéron</span> on Twitter</a>.
+      </li>
     </ul>
 
     <!-- 
