Add Raphaël Enthoven's Twitter presence

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -988,7 +988,8 @@
       <a href="https://twitter.com/Gescinska">Alicja Gescinska</a>,
       <a href="https://twitter.com/idevisch" lang="nl">Ignaas Devisch</a>
       <a href="https://twitter.com/filipbuekens" lang="nl">Filip Buekens</a>,
-      <a href="https://twitter.com/pvpbrussels" lang="nl">philippe van parijs</a>.) 
+      <a href="https://twitter.com/pvpbrussels" lang="nl">philippe van parijs</a>,
+      <a href="https://twitter.com/Enthoven_R" lang="fr">Raphaël Enthoven</a>.)
       Institutional accounts, such as 
       <a href="https://twitter.com/DailyNousEditor">Daily Nous</a>,
       <a href="https://twitter.com/LSEPhilosophy"><abbr title="London School of Economics and Political Science">LSE</abbr> Philosophy</a>,
