Add: La Nostalgie de l'Avenir (France Culture, 2003)

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -427,7 +427,7 @@
         <i class="booktitle">Les Origines de la culture</i>. 
         <span lang="fr">Entretiens avec Pierpaolo Antonello et João César de Castro Rocha, 
         suivi d’une réponse à Régis Debray sur ses critiques publiées dans <i>Le feu sacré</i> en 2003</span>.
-        2004<!-- @@check -->. Fayard, 2011
+        2004<!--@@check -->. Fayard, 2011
         <a href="http://www.fayard.fr/les-origines-de-la-culture-9782818502112"><abbr>ISBN</abbr> 9782818502112</a>.
         <br /><span lang="en-GB">Translations:</span>
         <ul>
@@ -987,6 +987,14 @@
         This is a video recording of René Girard's talk at the 2003 Colloquium on Violence and Religion in Innsbruck, Austria, on 20 June 2003.
         The video quality is low, but the audio is good enough; there are subtitles in French.
         <!--Copy without the intro: https://www.youtube.com/watch?v=K9_F5_KtVN8 -->
+      </li>
+      <li><span lang="fr">
+        <a href="https://www.youtube.com/watch?v=Qv0BUH0G1gc">René Girard | A. Finkielkraut &amp; P. Sloterdijk | La Nostalgie de l'Avenir</a>
+        (<i class="ytchannel">Les Choses Cachées</i></span> on YouTube, 118 minutes, 22.01.2020).
+        <br />A conversation with René Girard, Peter Sloterdijk and Alain Finkielkraut recorded on 05.12.2003 and broadcast by <span lang="fr">France Culture</span>.
+        <!--Cf also http://ekouter.net/la-nostalgie-de-l-avenir-avec-rene-girard-alain-finkielkraut-et-peter-sloterdijk-sur-france-culture-975
+          https://radiokilledthevideostar.wordpress.com/2009/09/08/repliques-rene-girard-peter-sloterdijk-24-01-2004/
+        -->
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=_whSwmXJaAY" lang="fr">René Girard - A propos de la Passion de Gibson (2003)</a>
