Add: Kolakowski: Was fragen uns die großen Philosophen?

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -339,7 +339,13 @@
         Philosophers from outside the German-speaking world include <span lang="fr">Comte</span>, Kierkegaard,
         Spencer, Mill, <span lang="fr">Taine</span>, C. S. Peirce and William James.
       </li>
+      <li>Kołakowski, Leszek:
+        <span lang="de"><i class="booktitle">Was fragen uns die großen Philosophen?</i> Leipzig: Reclam</span>, 2006.
+        <br />This is not a history of philosophy but a collection of short lectures in which Kołakowski
+        discusses some important ideas of thirty philosophers and thinkers and asks about the relevance of these ideas to the current world.
+      </li>
     </ul>
+
     <p>YouTube playlists and videos about the history of philosophy:</p>
     <ul>
       <li>
