Add: Diehl: Was ist Philosophie?

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -456,6 +456,9 @@
         <br />Short introductions to books that cover the history of philosophy and a number of important philosophers from Antiquity to Wilfried Sellars.
         <!--@@PDF-->
       </li>
+      <li><span lang="de">Diehl, Ulrich Walter:
+        <a href="https://www.ulrich-walter-diehl.de/philosophie/" hreflang="de">Was ist Philosophie?</a></span>.
+      </li>
     </ul>
 
   </main>
