Add: La laïcité implique-t-elle de masquer les signes religieux?

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -607,6 +607,10 @@
         a collection of lectures by Raymond William Firth, Edward E. Evans-Pritchard, Edmund Ronald Leach,
         J. G. Peristiany, John Laynard, Max Gluckman, Meyer Fortes and Godfrey Lienhardt.
       </li>
+      <li><span lang="fr">
+        <a href="https://ledrenche.ouest-france.fr/la-laicite-implique-t-elle-de-masquer-les-signes-religieux/" hreflang="fr">La laïcité implique-t-elle de masquer les signes religieux&nbsp;?</a>,
+        <i class="newspaper">Le Drenche</i></span>, 19.12.2019.
+      </li>
       <!--
       <li> : <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
