Add: Le Dernier Rire de René Girard | Entretien avec Daniel Lance

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -1066,6 +1066,12 @@
         at the <abbr>COV&amp;R</abbr> conference in Riverside, California, in June 2008.
         <!--Same talk/videos combined into a single video: https://www.youtube.com/watch?v=fzLSPHteh1M posted by Intellectual Deep Web, 01.06.2019 -->
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=oUlXTwNAW6s" lang="fr">Le Dernier Rire de René Girard | Entretien avec Daniel Lance</a>
+        (<i class="ytchannel">Les Choses Cachées</i></span> on YouTube, 9 minutes, 24.01.2020).
+        <br />Short excerpt from an interview by Daniel Lance in Stanford in 2010. To order the entire interview, see
+        <a href="http://daniel.lance.free.fr/crbst_2.html" hreflang="fr">Daniel Lance's webpage about <span lang="fr">René Girard</span></a>.
+      </li>
     </ul>
 
     <h2>Other Links</h2>
