Add: Brill blog: On the Relevance of the Humanities

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -298,6 +298,12 @@
         <i class="magazine">America Magazine - The Jesuit Review</i>, 04.11.2019.
       </li>
       <li>
+        <a href="https://blog.brill.com/humanitiesmatter/">On the Relevance of the Humanities (#HumanitiesMatter)</a>,
+        <i class="website">Brill blog</i> (no date, presumably October 2019).
+        See also
+        <a href="https://twitter.com/Brill_ME_Africa/status/1181524831436759040">Brill's tweet from 8 October 2019.
+      </li>
+      <li>
         <a href="https://academieciceron.com/" hreflang="fr" lang="fr">Académie Cicéron</a>.
         The <span lang="fr">Académie Cicéron</span> was founded in November 2019 in order to promote general cultural knowledge.
         The initiative came as a reaction against the elimination of the topic of general culture from certain entrance exams, especially at
