Add: James & Midford: To stop a tech apocalypse we need ethics and the arts

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -303,6 +303,10 @@
         See also
         <a href="https://twitter.com/Brill_ME_Africa/status/1181524831436759040">Brill's tweet from 8 October 2019.
       </li>
+      <li>James, Sara; Midford, Sarah:
+        <a href="https://techxplore.com/news/2019-12-tech-apocalypse-ethics-arts.html">To stop a tech apocalypse we need ethics and the arts</a>,
+        <i class="website">TechExplore</i>, 05.09.2019.
+      </li>
       <li>
         <a href="https://academieciceron.com/" hreflang="fr" lang="fr">Académie Cicéron</a>.
         The <span lang="fr">Académie Cicéron</span> was founded in November 2019 in order to promote general cultural knowledge.
