Add: Ross: Oh, the humanity: rise of robots ‘to force about-turn in academy’

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -307,6 +307,10 @@
         <a href="https://techxplore.com/news/2019-12-tech-apocalypse-ethics-arts.html">To stop a tech apocalypse we need ethics and the arts</a>,
         <i class="website">TechExplore</i>, 05.09.2019.
       </li>
+      <li>Ross, John:
+        <a href="https://www.timeshighereducation.com/news/oh-humanity-rise-robots-toforce-about-turn-academy">Oh, the humanity: rise of robots ‘to force about-turn in academy’</a>,
+        <i class="website">Times Higher Education</i>, 06.12.2019.
+      </li>
       <li>
         <a href="https://academieciceron.com/" hreflang="fr" lang="fr">Académie Cicéron</a>.
         The <span lang="fr">Académie Cicéron</span> was founded in November 2019 in order to promote general cultural knowledge.
