Add: Sadler: FAQ: Dr Sadler Responds #8 - You Have To Read The Actual Philosophical Text

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -459,6 +459,11 @@
       <li><span lang="de">Diehl, Ulrich Walter:
         <a href="https://www.ulrich-walter-diehl.de/philosophie/" hreflang="de">Was ist Philosophie?</a></span>.
       </li>
+      <li>Sadler, Gregory B.:
+        <a href="https://www.youtube.com/watch?v=xgf2jztjaF4"><abbr>FAQ</abbr>: <abbr>Dr</abbr> Sadler Responds #8 - You Have To Read The Actual Philosophical Text</a>
+        (<i class="ytchannel">Gregory B. Sadler</i> on YouTube, 9 minutes, 30.01.2020.
+        <!--Sadler's website: https://reasonio.wordpress.com/ -->
+      </li>
     </ul>
 
   </main>
