Add: Lutz von Werder: Grundkurs des wissenschaftlichen Lesens

--- a/science/doctoral-research.html
+++ b/science/doctoral-research.html
@@ -171,7 +171,12 @@
         online version of a book originally published in 1997.
         <!--@@PDF-->
       </li>
-      <!-- Gauch: Scientific Method in Practice: http://www.cambridge.org/de/academic/subjects/life-sciences/life-science-professional-development/scientific-method-practice?format=PB&isbn=9780521017084 -->
+      <li><span lang="de">von Werder, Lutz:
+        <i class="booktitle">Grundkurs des wissenschaftlichen Lesens</i>. Schibri-Verlag</span>, 1995. (80 pages)
+        <a href="https://www.schibri.de/978-3-928878-26-5/grundkurs-des-wissenschaftlichen-lesens?number=978-3-928878-26-5"><abbr>ISBN</abbr> 978-3-928878-26-5 </a>.
+        <!--@@todo 7,80 €-->
+      </li>
+      <!--Gauch: Scientific Method in Practice: http://www.cambridge.org/de/academic/subjects/life-sciences/life-science-professional-development/scientific-method-practice?format=PB&isbn=9780521017084 -->
       <li>
         <a href="https://www.researchgate.net/post/What_skills_got_your_through_or_will_get_you_through_your_PhD_doctorate">What skills got your through (or will get you through) your PhD/doctorate? </a>
         (discussion on ResearchGate).
