Add: Quran: A New Annotated Edition. Translated by A. J. Droge

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -617,6 +617,16 @@
         <a href="https://ledrenche.ouest-france.fr/la-laicite-implique-t-elle-de-masquer-les-signes-religieux/" hreflang="fr">La laïcité implique-t-elle de masquer les signes religieux&nbsp;?</a>,
         <i class="newspaper">Le Drenche</i></span>, 19.12.2019.
       </li>
+      <li>
+        <i class="booktitle">The Qur'an: A New Annotated Translation</i>. Translated by A. J. Droge. Comparative Islamic Studies. Equinox Publishing, 2013. (558 pages)
+        <a href="https://www.equinoxpub.com/home/quran-new-annotated-translation/"><abbr>ISBN</abbr> 9781845539450</a>.
+        <br />From the publisher's book description:
+        <q>This new, annotated translation of the Qurʾān is specifically designed to meet the needs of students of religion,
+        and provides them with a one-volume resource comparable to what is available for the Jewish and Christian scriptures</q>
+        See also the
+        <a href="https://www.equinoxpub.com/home/quran-about-this-translation/">excerpt &ldquo;About this Translation&rdquo;</a>.
+        <!--@@check!-->
+      </li>
       <!--
       <li> : <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
