add: Hao: KI: Das Greenwashing muss ein Ende haben

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -428,6 +428,10 @@
         <i class="newspaper">Tagesspiegel Background</i></li>, 18.12.2019.
         <br /><q lang="de">Falls die Forschung oder die veröffentlichten Ergebnisse nicht im Sinne von Facebook verlaufen, können die Mittel jederzeit nach Belieben gestoppt werden.</q>.
       </li>
+      <li><span lang="de">Hao, Karen:
+        <a href="https://www.heise.de/tr/artikel/KI-Das-Greenwashing-muss-ein-Ende-haben-4647795.html"><abbr>KI</abbr>: Das "Greenwashing" muss ein Ende haben</a></span>,
+        <i class="website">Technology Review</i>, 05.02.2020.
+      </li>
     </ul>
 
     <h2><abbr>AI</abbr> Safety</h2>
