Add: Schwan: Mehr Ethik für die Künstliche Intelligenz

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -432,6 +432,10 @@
         <a href="https://www.heise.de/tr/artikel/KI-Das-Greenwashing-muss-ein-Ende-haben-4647795.html"><abbr>KI</abbr>: Das "Greenwashing" muss ein Ende haben</a></span>,
         <i class="website">Technology Review</i>, 05.02.2020.
       </li>
+      <li><span lang="de">Schwan, Ben:
+        <a href="https://www.heise.de/newsticker/meldung/Mehr-Ethik-fuer-die-Kuenstliche-Intelligenz-4647789.html" hreflang="de">Mehr Ethik für die Künstliche Intelligenz</a>,
+        <i class="website">heise.de</i></span>, 05.02.2020.
+      </li>
     </ul>
 
     <h2><abbr>AI</abbr> Safety</h2>
