Add: Rationality Rules: Jesus Smuggling : Is Jordan Peterson Guilty?

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -627,6 +627,28 @@
         <a href="https://www.equinoxpub.com/home/quran-about-this-translation/">excerpt &ldquo;About this Translation&rdquo;</a>.
         <!--@@check!-->
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=on0Lziov00Y">Jesus Smuggling | Is Jordan Peterson Guilty?</a>
+        (<i class="ytchannel">Rationality Rules</i> on YouTube, 12 minutes, 11.02.2020).
+        <!--video with UK English subtitles-->
+        <br />
+        <q cite="https://youtu.be/on0Lziov00Y?t=132">Jesus smuggling occurs when someone sneaks Christianity into an otherwise valid argument,
+        or tethers Christianity to an otherwise valid premise. Take, for instance, the entire epistemic lobotomy that is presuppositional apologetics. (&hellip;)
+        These apologists start with the relatively simple rules of inference. (&hellip;) Then they delve into a variation of the hard problem of induction. (&hellip;)
+        And at that point, amongst the tides of ambiguity, they add just a little drop of Jesus juice. (&hellip;)
+        Indeed, they drag you down into the murky depths of epistemology, and then boastfully beg the question as if it's not a logical fallacy.</q>
+        Jordan Peterson does not actually do any Jesus smuggling, but he creates an environment that facilitates it.
+      </li>
+      <!--See also
+        * "Jordan Peterson & The Meaning of Life | Philosophy Tube", 40 minutes: https://www.youtube.com/watch?v=SEMB1Ky2n1E
+        * "Jordan Peterson | ContraPoints", 28 minutes, https://www.youtube.com/watch?v=4LqZdkkBDas
+        * Destiny: "Jordan Peterson is WRONG", 60 minutes: https://www.youtube.com/watch?v=2FgQ_4h3ilY
+        * Destiny: "YOU'RE GIVING US CANCER - DEBATING A JORDAN PETERSON DEFENDER", 205 minutes: https://www.youtube.com/watch?v=j5Uv_P-PQoc
+          [Think Club: "Jordan Peterson Vs YouTube Philosopher Destiny", 6 minutes, 29.01.2019: https://www.youtube.com/watch?v=VMo_0lu0KhQ
+            Criticises Destiny's claim that Jordan Peterson makes descriptive claims but not normative claims. In spite of the fact that Jordan Peterson told the Canadian government that compelled speech is immoral.
+             [See https://www.jordanbpeterson.com/podcast/episode-32/ ]
+             In addition, Peterson published a book entitled "12 Rules for Life"; rules are normative statements.
+      -->
       <!--
       <li> : <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
