Add: Dèbes: Reconnaissance faciale : le gouvernement souhaite faire une expérimentation dans la vidéosurveillance

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -1200,6 +1200,13 @@
         <q>has called for all algorithms that make life-changing decisions – in areas from job applications to immigration into the <abbr>UK</abbr>&nbsp;– to be halted immediately.</q>
         <q>As well as numerous examples of racial bias in machine-led decisions on, for example, who gets bail in the <abbr>US</abbr> or on healthcare allocation, Sharkey said his work on autonomous weapons, or “killer robots”, also illuminated how bias infects algorithms.</q>
       </li>
+      <li><span lang="fr">Dèbes, Florian:
+        <a href="https://www.lesechos.fr/tech-medias/hightech/reconnaissance-faciale-le-gouvernement-souhaite-faire-une-experimentation-dans-la-videosurveillance-1158819" hreflang="fr">Reconnaissance faciale&nbsp;: le gouvernement souhaite faire une expérimentation dans la vidéosurveillance</a>,
+        <i class="newspaper">Les Echos</i></span>, 24.12.2019.
+        <br /><blockquote lang="fr">Sur le sujet très polémique de l'utilisation de la reconnaissance faciale à des fins de vidéosurveillance, le secrétaire d'Etat au numérique vient de faire part,&nbsp;
+        <a href="http://www.leparisien.fr/high-tech/reconnaissance-faciale-cedric-o-n-est-pas-certain-qu-alicem-soit-un-jour-deployee-24-12-2019-8223705.php">dans une interview au « Parisien »</a>,
+        du souhait du gouvernement «&nbsp;<em>d'ouvrir une phase d'expérimentation, de six mois à un an, sous la supervision de la société civile et des chercheurs</em>&nbsp;».</blockquote>
+      </li>
     </ul>
 
 
