Add: Philosophy of Science (Universität Bielefeld)

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -1019,6 +1019,10 @@
         <a href="http://users.ox.ac.uk/~worc0337/phil_topics_sci.html">Philosophy of Science. Including Technology, Cosmology, &amp; Maths</a>.
         This page is a link collection; possibly no updated since 2011.
       </li>
+      <li>
+        <a href="https://www.uni-bielefeld.de/philosophie/forschung/wissenschaft/">Philosophy of Science (<span lang="de">Universität Bielefeld</span>)</a>:
+        description of the research areas and researchers in the area of philosophy of science at the <span lang="de">Universität Bielefeld</span>.
+      </li>
       <li><a href="https://philosophy.stackexchange.com/q/68722/23586">Is economics a science?</a>
         This question was posted on Philosophy Stack Exchange in November 2019 and has severals answers that discuss the demarcation problem.
       </li>
