--- a/philscience/index.html
+++ b/philscience/index.html
@@ -1023,6 +1023,10 @@
         <a href="https://www.uni-bielefeld.de/philosophie/forschung/wissenschaft/">Philosophy of Science (<span lang="de">Universität Bielefeld</span>)</a>:
         description of the research areas and researchers in the area of philosophy of science at the <span lang="de">Universität Bielefeld</span>.
       </li>
+      <li>
+        <a href="https://grk2073.org/">Integrating Ethics and Epistemology of Scientific Research (<abbr lang="de" title="Deutsche Forschungsgemeinschaft">DFG</abbr> Research Training Group 2073)</a>:
+        website of a research project.
+      </li>
       <li><a href="https://philosophy.stackexchange.com/q/68722/23586">Is economics a science?</a>
         This question was posted on Philosophy Stack Exchange in November 2019 and has severals answers that discuss the demarcation problem.
       </li>
