--- a/philscience/index.html
+++ b/philscience/index.html
@@ -1027,6 +1027,9 @@
         <a href="https://grk2073.org/">Integrating Ethics and Epistemology of Scientific Research (<abbr lang="de" title="Deutsche Forschungsgemeinschaft">DFG</abbr> Research Training Group 2073)</a>:
         website of a research project.
       </li>
+      <li>
+        <a href="https://www.hlrs.de/about-us/organization/divisions-departments/stu/pst/">Philosophy of Science &amp; Technology of Computer Simulation (<abbr lang="de" title="Höchstleistungsrechenzentrum Stuttgart">HLRS</abbr> High Performance Computing Center Stuttgart)</a>.
+      </li>
       <li><a href="https://philosophy.stackexchange.com/q/68722/23586">Is economics a science?</a>
         This question was posted on Philosophy Stack Exchange in November 2019 and has severals answers that discuss the demarcation problem.
       </li>
