Add: Philosophy of Science (Munich Center for Mathematical Philosophy)

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -1030,6 +1030,9 @@
       <li>
         <a href="https://www.hlrs.de/about-us/organization/divisions-departments/stu/pst/">Philosophy of Science &amp; Technology of Computer Simulation (<abbr lang="de" title="Höchstleistungsrechenzentrum Stuttgart">HLRS</abbr> High Performance Computing Center Stuttgart)</a>.
       </li>
+      <li>
+        <a href="https://www.mcmp.philosophie.uni-muenchen.de/research/philosophy_of_science/index.html">Philosophy of Science (Munich Center for Mathematical Philosophy (<abbr>MCMP</abbr>), <abbr>LMU</abbr> Munich)</a>.
+      </li>
       <li><a href="https://philosophy.stackexchange.com/q/68722/23586">Is economics a science?</a>
         This question was posted on Philosophy Stack Exchange in November 2019 and has severals answers that discuss the demarcation problem.
       </li>
