Add: Magnabosco: “My holy book is just as testable as a history book.” What’s a good question to ask in return?

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -627,6 +627,25 @@
         <a href="https://www.equinoxpub.com/home/quran-about-this-translation/">excerpt &ldquo;About this Translation&rdquo;</a>.
         <!--@@check!-->
       </li>
+      <li>Magnabosco, Anthony:
+        <a href="https://twitter.com/magnabosco/status/1230276133985439745">“My holy book is just as testable as a history book.” What’s a good question to ask in return?</a>
+        (<i class="website">Twitter</i>, 20.02.2020).
+        <br />People posted many response to this question, many of the humorous (for example
+        <q cite="https://twitter.com/RikDhuyvetters/status/1230466030935343105" title="response by Rik D'huyvetters">"A comic book is just as testable as your holy book"</q>).
+        Below are a few of the more serious responses:
+        <ul>
+          <li><q cite="https://twitter.com/makingsense136/status/1230277322919546880">If reliable evidence came to light that disproved what's written in your holy book, would you be prepared to accept it?</q> (by David Hancock),</li>
+          <li><q cite="https://twitter.com/B_Y_3/status/1230282017293635590">What’s the best way to test a history book’s reliability? How would you know if a narrative it told was false?</q> (by Ben Kenobi; Anthony Magnabosco responded he might use it),</li>
+          <li><q cite="https://twitter.com/Caldaeon/status/1230280633479352320">If you found inconsistencies in a history book would you lower your confidence in how trustworthy it is?</q>
+            and
+            <q cite="https://twitter.com/Caldaeon/status/1230281424780943360">Follow up: does that standard also apply to your holy book?</q> (by Caldaeon),
+          </li>
+          <li><q cite="https://twitter.com/CounterApologis/status/1230306941630648322">How many history books make miracle claims that violate our background knowledge about how the world works?<br />Are miracle claims of other holy books evidence of their philosophical and theological truth claims?</q> (by Counter Apologist),</li>
+          <li><q cite="https://twitter.com/California_Ram/status/1230326453398462465">Is it possible the recently found Gospel Of Thomas and the writings of Judas could be just as testable, as other ancient manuscripts that people revere?</q> (by John / @California_Ram),</li>
+          <li><q cite="https://twitter.com/Bkaiser1Bill/status/1230278947352588291">Where in the history book does it refute physics, geology, geography, biology and all of human history?</q> (by Bill / @Bkaiser1Bill),</li>
+          <li><q cite="https://twitter.com/tmeister1234/status/1230278202183933952">What tests have you personally done on said holy book to exercise that statement?</q> (by 🎃TransReprobate🎃 / @tmeister1234).</li>
+        </ul>
+      </li>
       <li>
         <a href="https://www.youtube.com/watch?v=on0Lziov00Y">Jesus Smuggling | Is Jordan Peterson Guilty?</a>
         (<i class="ytchannel">Rationality Rules</i> on YouTube, 12 minutes, 11.02.2020).
