Add: Atelier médiation et critique

--- a/science/index.html
+++ b/science/index.html
@@ -1030,6 +1030,13 @@
         <i class="website">PolitiZoom</i>, 02.09.2019.
         <br />Perkins said, <q>We’ve taught our kids that they come about by chance through primordial slime and then we’re surprised that they treat their fellow Americans like dirt</q>.
       </li>
+      <li>
+        <a href="https://atelier-mediation-critique.fr/" hreflang="fr" lang="fr">Atelier médiation et critique&nbsp;- Médiation scientifique et esprit critique</a>:
+        website created by
+        <a href="https://www.amcsti.fr/fr/" hreflang="fr" lang="fr"><abbr>Amscti</abbr> (réseau national des professionnels des cultures scientifique, technique et industrielle)</a>
+        in France in order to bring together stakeholders from science and technology to share ideas and resources
+        about how to talk about science and belief in public debates.
+      </li>
       <!--
       <li>
         <a href=""></a>
